--- a/data/cities/starkville/bulldog-smoke-shop.yml
+++ b/data/cities/starkville/bulldog-smoke-shop.yml
@@ -6,6 +6,6 @@ postcode: "39759"
 city: Starkville
 street: Martin Luther King, Junior Drive East
 housenumber: "303"
-phone: +1 662 268 8325
-opening_hours: 09:00-22:00
+phone: +1-662-268-8325
+opening_hours: Mo-Su 10:00-22:00
 website: https://sites.google.com/view/bulldog-smoke-shop
